# ECE493proj

./: .coverage  .gitignore  Blend_Color_Game_User_Stories.md  README.md  TESTING.md  Use_Cases_Scenarios_ATs (2).md  architecture_note.md  coding-standard-frontend.md  coding-standard-python.md  constitution.md
backend/: .coverage  .env.example  manage.py  pyproject.toml  requirements.txt
backend/api/: exceptions.py  health.py  schemas.py  urls.py
backend/api/views/: auth_views.py  gameplay_views.py  history_views.py  room_views.py  session_views.py  social_views.py
backend/apps/accounts/: models.py
backend/apps/gameplay/: models.py  validators.py
backend/apps/history/: models.py
backend/apps/rooms/: models.py  validators.py
backend/apps/social/: models.py
backend/blend_colour_game/: asgi.py  settings.py  urls.py  wsgi.py
backend/engine/: round_engine.py  scoring_engine.py
backend/services/: history_service.py  identity_service.py  match_service.py  mode_service.py  room_service.py  social_service.py
backend/tests/acceptance/: test_acceptance_suite.py
backend/tests/contract/: test_http_contract.py
backend/tests/integration/: test_gameplay_flow.py  test_realtime_flow.py
backend/tests/unit/: test_accounts.py  test_coverage_gaps.py  test_gameplay.py  test_gameplay_views_validators_round_engine.py  test_health.py  test_history.py  test_match_service.py  test_mode_room_session_views.py  (+5 more)
backend/websockets/: __init__.py  match_publisher.py  messages.py  presence_publisher.py  results_publisher.py  room_consumer.py  routing.py  submission_publisher.py
(+122 files in other folders)
